--- a/week_5_6/homework/elan/note/week_56.ipynb
+++ b/week_5_6/homework/elan/note/week_56.ipynb
@@ -56,6 +56,34 @@
     "- `confirmVerified(...)`: 모든 상호동작이 검증되었는지 확인.\n",
     "\n"
    ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## 테스트 모범사례와 팁\n",
+    "\n",
+    "1. 테스트 구조는 Given-When-Then 구조를 따를것\n",
+    "    - Given: 테스트 조건 설정\n",
+    "    - When: 테스트 할 기능 실행\n",
+    "    - Then: 결과 검증\n",
+    "2. 테스트의 이름은 명확하게 할것\n",
+    "    - 백틱(\\`\\`)을 테스트 이름으로 가독성향상\n",
+    "    - 어떤 테스트를 진행할것인지 명확하게 설명\n",
+    "3. 테스트는 독립적이어야 함\n",
+    "    - 의존성 없이 각각 독립적으로 실행가능해야 함.\n",
+    "    - 공유 상태를 피해야 함\n",
+    "4. 목(Mock) 객체는 필요한것만 설정\n",
+    "    - 테스트와 관련없는 목 설정은 피할것.\n",
+    "    - 과도한 목 설정은 유지보수를 어렵게 만듬.\n",
+    "5. 통합 테스트도 고려할것\n",
+    "    - 단위 테스트만으로 모든 문제를 파악할수 없음.\n",
+    "    - `@SpringBootTest` 를 통한 통합 테스트 추가\n",
+    "\n",
+    "\n",
+    "### 참고\n",
+    "- [다음에 해볼 통합테스트](https://claude.ai/share/d925eb2d-a706-4c38-8b85-1b72007f92bf)"
+   ]
   }
  ],
  "metadata": {
