리뷰항목 수정

--- a/week_3_4/homework/elan/HOMEWORK_W3-4.ipynb
+++ b/week_3_4/homework/elan/HOMEWORK_W3-4.ipynb
@@ -113,8 +113,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-28T16:12:49.140996Z",
-     "start_time": "2025-04-28T16:12:36.108373Z"
+     "end_time": "2025-05-21T14:00:13.231697200Z",
+     "start_time": "2025-05-21T14:00:03.844975600Z"
     }
    },
    "cell_type": "code",
@@ -139,8 +139,10 @@
     "\n",
     "fun addCart(no: Int): Unit {\n",
     "    val entry = products[no]\n",
-    "    cart.add(entry)\n",
-    "    println(\"상품이 장바구니에 추가 되었습니다. ${entry[\"name\"]}: ${entry[\"price\"]}\")\n",
+    "    cart.add(entry).also {\n",
+    "        println(\"상품이 장바구니에 추가 되었습니다. ${entry[\"name\"]}: ${entry[\"price\"]}\")\n",
+    "    }\n",
+    "\n",
     "}\n",
     "\n",
     "fun printProduct(entry: Map<String, Any>): Unit = println(\"${entry[\"name\"]}: ${entry[\"price\"]}\")\n",
@@ -178,45 +180,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 . Keyboard: 50000\n",
-      "2 . Egg: 5000\n",
-      "3 . PineApple: 15000\n",
-      "4 . Pizza: 15000\n",
-      "5 . Bread: 3000\n",
-      "6 . Onion: 1200\n",
-      "7 . Milk: 3000\n",
+      "1 . Keyboard: 50000\r\n",
+      "2 . Egg: 5000\r\n",
+      "3 . PineApple: 15000\r\n",
+      "4 . Pizza: 15000\r\n",
+      "5 . Bread: 3000\r\n",
+      "6 . Onion: 1200\r\n",
+      "7 . Milk: 3000\r\n",
+      "\r\n",
+      "상품이 장바구니에 추가 되었습니다. PineApple: 15000\r\n",
+      "상품이 장바구니에 추가 되었습니다. Pizza: 15000\r\n",
+      "상품이 장바구니에 추가 되었습니다. Egg: 5000\r\n",
+      "상품이 장바구니에 추가 되었습니다. Keyboard: 50000\r\n",
+      "상품이 장바구니에 추가 되었습니다. Bread: 3000\r\n",
       "\n",
-      "상품이 장바구니에 추가 되었습니다. Keyboard: 50000\n",
-      "상품이 장바구니에 추가 되었습니다. Keyboard: 50000\n",
-      "상품이 장바구니에 추가 되었습니다. Pizza: 15000\n",
-      "상품이 장바구니에 추가 되었습니다. Pizza: 15000\n",
-      "상품이 장바구니에 추가 되었습니다. Egg: 5000\n",
-      "상품이 장바구니에 추가 되었습니다. PineApple: 15000\n",
-      "상품이 장바구니에 추가 되었습니다. Onion: 1200\n",
-      "상품이 장바구니에 추가 되었습니다. Onion: 1200\n",
-      "상품이 장바구니에 추가 되었습니다. Bread: 3000\n",
-      "\n",
-      "최종 장바구니 목록\n",
-      "Keyboard: 50000\n",
-      "Keyboard: 50000\n",
-      "Pizza: 15000\n",
-      "Pizza: 15000\n",
-      "Egg: 5000\n",
-      "PineApple: 15000\n",
-      "Onion: 1200\n",
-      "Onion: 1200\n",
-      "Bread: 3000\n",
-      "총 금액 155400 - 할인 적용 대상입니다!\n",
-      "\n",
-      "10,000원 이하 상품 목록:\n",
-      "Egg: 5000\n",
-      "Onion: 1200\n",
-      "Onion: 1200\n",
-      "Bread: 3000\n"
+      "최종 장바구니 목록\r\n",
+      "PineApple: 15000\r\n",
+      "Pizza: 15000\r\n",
+      "Egg: 5000\r\n",
+      "Keyboard: 50000\r\n",
+      "Bread: 3000\r\n",
+      "총 금액 88000\n",
+      "10,000원 이하 상품 목록:\r\n",
+      "Egg: 5000\r\n",
+      "Bread: 3000\r\n"
      ]
     }
    ],
-   "execution_count": 4
+   "execution_count": 3
   },
   {
    "metadata": {},
